cmake_minimum_required(VERSION 3.17)
project(trabalhoGrafos2020_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(trabalhoGrafos2020_3 Edge.cpp Edge.h Node.cpp Node.h Graph.cpp Graph.h AlgoritmoKruskal.cpp AlgoritmoKruskal.h main.cpp AlgoritmoFloyd.cpp AlgoritmoFloyd.h AlgoritmoDijkstra.cpp AlgoritmoDijkstra.h AlgoritmoPrim.cpp AlgoritmoPrim.h)